--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
     {% if title %}
     <title>{{title}}</title>
     {% else %}
-    <title>Flask Blog</title>
+    <title>Posso sair?</title>
     {% endif %}
 </head>
 
@@ -22,7 +22,7 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
-                <a class="navbar-brand mr-4" href="/">Posso Sair?</a>
+                <a class="navbar-brand mr-4" href="/">Posso sair de casa ?</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -36,6 +36,7 @@
     <main role="main" class="container">
         <div class="row">
             <div class="col-md-8">
+
 
                 {% block content %}{% endblock %}
             </div>
