--- a/templates/nao.html
+++ b/templates/nao.html
@@ -15,11 +15,12 @@
 
     .page-wrap {
         position: absolute;
-        font-size: xx-large;
+        font-family: sans-serif;
+        font-size: 100px;
         text-align: center;
         width: 100%;
         height: 50px;
-        top: 50%;
+        top: 35%;
         margin-top: -25px;
         margin-bottom: -50px;
     }
