--- a/templates/sim.html
+++ b/templates/sim.html
@@ -1,53 +1,21 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="{{ url_for('static', filename='sim.css') }}">
 <html>
 
-<style>
-    * {
-        margin: 0;
-        background: rgb(32, 179, 27);
-        color: antiquewhite;
-    }
+<body class="sim">
 
-    html,
-    body {
-        height: 100%;
-    }
+    <div>
+        <div class="page-wrap">
+            <h1>SIM</h1>
+        </div>
 
-    .page-wrap {
-        position: absolute;
-        font-family: sans-serif;
-        font-size: 100px;
-        text-align: center;
-        width: 100%;
-        height: 50px;
-        top: 35%;
-        margin-top: -25px;
-        margin-bottom: -50px;
-    }
-
-    .footer {
-        position: fixed;
-        left: 0;
-        bottom: 50px;
-        width: 100%;
-        text-align: center;
-    }
-
-    ​
-</style>
-
-
-
-<div class="sim">
-    <div class="page-wrap">
-        <h1>SIM</h1>
+        <footer class="footer">
+            {% if inter_concelho == "False" %}
+            <p>Mas sem circulação inter-concelhia!</p>
+            {% endif %}
+        </footer>
     </div>
 
-    <footer class="footer">
-        {% if inter_concelho == "False" %}
-        <p>Mas sem circulação inter-concelhia!</p>
-        {% endif %}
-    </footer>
-</div>
+</body>
 
 </html>
