--- a/templates/home.html
+++ b/templates/home.html
@@ -22,10 +22,12 @@
 </form>
 
 <footer class="footer">
+    <span class="text-muted">ultima atualização: 07/12/2020</span>
     <p>
         <span class="text-muted">mais informação em: </span><a
             href="https://covid19estamoson.gov.pt/">covid19estamoson.gov.pt</a>
     </p>
+
     <a href="https://github.com/EtienneJanel/PossoSair">
         <img class="text-muted" src="{{url_for('static', filename='GitHub-Mark-64px.png')}}" alt="" width=32px>
     </a>
