--- a/templates/sim.html
+++ b/templates/sim.html
@@ -1,21 +1,58 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <link rel="stylesheet" href="{{ url_for('static', filename='sim.css') }}">
+<style>
+    .footer {
+        position: fixed;
+        left: 0;
+        bottom: 0px;
+        width: 100%;
+        text-align: center;
+        background: antiquewhite;
+
+    }
+
+    h1 {
+        position: absolute;
+        font-family: sans-serif;
+        font-size: 300px;
+        text-align: center;
+        width: 100%;
+        top: 100%;
+    }
+
+    h2 {
+        font-family: sans-serif;
+        text-align: center;
+        width: 100%;
+    }
+</style>
+
 <html>
 
 <body class="sim">
-
     <div>
         <div class="page-wrap">
             <h1>SIM</h1>
+
+            {% if inter_concelho == "False" %}
+            <h2>Mas sem circulação inter-concelhia!</h2>
+            {% endif %}
         </div>
 
-        <footer class="footer">
-            {% if inter_concelho == "False" %}
-            <p>Mas sem circulação inter-concelhia!</p>
-            {% endif %}
-        </footer>
-    </div>
-
 </body>
+
+<footer class="footer">
+    <span class="text-muted">ultima atualização: 07/12/2020</span>
+    <p>
+        <span class="text-muted">mais informação em: </span><a
+            href="https://covid19estamoson.gov.pt/">covid19estamoson.gov.pt</a>
+    </p>
+
+    <a href="https://github.com/EtienneJanel/PossoSair">
+        <img class="text-muted" src="{{url_for('static', filename='GitHub-Mark-64px.png')}}" alt="" width=32px>
+    </a>
+</footer>
 
 </html>
