--- a/templates/nao.html
+++ b/templates/nao.html
@@ -21,7 +21,7 @@
         font-size: 300px;
         text-align: center;
         width: 100%;
-        top: 100%;
+        /* top: 100%; */
     }
 
     h2 {
