--- a/templates/sim.html
+++ b/templates/sim.html
@@ -19,7 +19,7 @@
         font-size: 300px;
         text-align: center;
         width: 100%;
-        top: 100%;
+        /* top: 100%; */
     }
 
     h2 {
